# MCU-CLI

./: .gitignore  README.md  pyproject.toml
.agent/skills/mcucli/: SKILL.md
.agent/skills/mcucli/agents/: openai.yaml
.agent/skills/mcucli/references/: command_reference.md  hardware_connections.md
.agent/skills/mcucli/scripts/: compile_tool.py  flash_tool.py  hardware_connect.py
Project/: README.md  TASK_TEMPLATE.md
Project/ESP32_S3LED/: TASK.md  blink.py  flash.py
Project/MSPM0_Tianmengxing_Blink/: board.json  empty_non_sysconfig.c  flash.py  ti_msp_dl_config.c  ti_msp_dl_config.h
docs/: CLI-Anything-Compliance-Audit.md
mcucli/: .gitignore  README.md  __init__.py  config.py  mcucli.py  requirements.txt
mcucli/compiler/: __init__.py  base.py  registry.py
mcucli/compiler/chips/: __init__.py  stm32f0.py  stm32f1.py  stm32f3.py  stm32f4.py
mcucli/hardware/: __init__.py  micropython.py  mspm0.py  swd.py
mcucli/scripts/: __init__.py  serial_monitor.py
